5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1706_3055.log
== TEST (2019-04-29 19:08:44) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
print(v,2)
-- ERROR:
File "XXXX", line 10
    print(v,2)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:08:55) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
print(v)
-- ERROR:
File "XXXX", line 10
    print(v)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:09:49) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
else:
	print(v)
-- ERROR:
File "XXXX", line 10
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:10:31) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:10:51) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print(v)
-- EXECUTION TIME:
0.145379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:10:53) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:11:15) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print(v)
-- EXECUTION TIME:
0.133831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:11:48) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:12:00) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print()
-- EXECUTION TIME:
0.173027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:12:23) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:12:46) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:13:53) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:14:07) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print()
-- EXECUTION TIME:
0.150291
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:

-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:

-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:14:09) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:15:09) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
else:
	valor=250.0
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(valor)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:15:20) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
else:
	valor=250.0
print(valor,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(valor,2)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:16:59) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(valor)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:17:17) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
elif(x > 100) and (x <= 200):
	gorjeta=0.09
elif(x > 200) and (x <= 300):
	gorjeta=0.08
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(valor)
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:18:39) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(valor)
-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:18:51) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(valor)
-- EXECUTION TIME:
0.200131
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
100.1
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:

-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
10.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:18:57) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta

-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:19:22) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(round(valor,2))
-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:19:28) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(round(valor,2))
-- EXECUTION TIME:
0.205943
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
100.1
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:

-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
10.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:19:32) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(round(valor))
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:19:38) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(round(valor))
-- EXECUTION TIME:
0.128193
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
100
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:

-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:19:47) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(round(valor))
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:20:05) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(valor)
-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:20:23) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(valor,2)
-- OUTPUT:
100.1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:20:39) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(round(valor,2))
-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:20:48) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=x+gorjeta
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
elif(x > 300):
	gorjeta=0.07
else:
	valor=x+gorjeta
print(round(valor,2))
-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:22:26) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:22:33) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- EXECUTION TIME:
0.147276
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
100.1
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
360.07
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
10.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:22:34) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- OUTPUT:
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:23:18) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:23:36) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- EXECUTION TIME:
0.147098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:23:37) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:23:56) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- EXECUTION TIME:
0.1474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:23:57) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:24:12) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(round(valor,2))
-- EXECUTION TIME:
0.156175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:24:19) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:24:29) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor=(x+gorjeta)
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=(x+gorjeta)
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=(x+gorjeta)
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
else:
	valor=x+gorjeta
print(valor)
-- EXECUTION TIME:
0.156548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:29:36) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:29:52) 
-- CODE:
x=float(input("valor consumido:"))
v=float(input("valor total da conta:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- EXECUTION TIME:
0.273666
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1706/3055/main.py", line 2, in <module>
    v=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:29:57) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:30:11) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:30:23) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:30:35) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:30:45) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:30:54) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(valor)
-- EXECUTION TIME:
0.121986
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
100.1
100.1
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
360.07
360.07
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
10.33
10.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:32:15) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(round(valor,2)
-- ERROR:
File "XXXX", line 21
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:32:23) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
print(round(valor,2)
-- ERROR:
File "XXXX", line 21
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:32:56) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2)
-- ERROR:
File "XXXX", line 22
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:33:04) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:33:13) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:33:24) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- EXECUTION TIME:
0.155923
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
100.1
100.1
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
360.07
360.07
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
10.33
10.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:33:25) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:33:31) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- EXECUTION TIME:
0.132847
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
100.1
100.1
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
360.07
360.07
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
10.33
10.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:33:34) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:34:14) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+gorjeta
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+gorjeta
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+gorjeta
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
100.1
100.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:39:06) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
110.0
110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:39:20) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
110.0
110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:39:30) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
110.0
110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:39:37) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- EXECUTION TIME:
0.175331
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
110.0
110.0
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
385.2
385.2
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
11.25
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:39:39) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- OUTPUT:
110.0
110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:39:46) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:
	valor=x+gorjeta
	
print(round(valor,2))
-- EXECUTION TIME:
0.147349
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
110.0
110.0
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
385.2
385.2
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
11.25
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:40:10) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:	
print(round(valor,2))
-- ERROR:
File "XXXX", line 19
    print(round(valor,2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:40:20) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:	
	print(round(valor,2))
-- OUTPUT:
110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:40:27) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:	
	print(round(valor,2))
-- OUTPUT:
110.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:40:34) 
-- CODE:
x=float(input("valor consumido:"))
if(x >= 0)and (x <= 100):
	gorjeta=0.1
	valor= x+x*0.1
	print(round(valor,2))
elif(x > 100) and (x <= 200):
	gorjeta=0.09
	valor=x+x*0.09
	print(round(valor,2))
elif(x > 200) and (x <= 300):
	gorjeta=0.08
	valor=x+x*0.08
	print(round(valor,2))
elif(x > 300):
	gorjeta=0.07
	valor=x+x*0.07
	print(round(valor,2))
else:	
	print(round(valor,2))
-- EXECUTION TIME:
0.224654
-- TEST CASE 1:
---- input:
100.0
---- correct output:
110.0
---- user output:
110.0
-- TEST CASE 2:
---- input:
360.0
---- correct output:
385.2
---- user output:
385.2
-- TEST CASE 3:
---- input:
10.23
---- correct output:
11.25
---- user output:
11.25
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
